--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 /04_Lenguaje de marcas/UD04/XML_TutorialesYoutube/nbproject/private/
 /03_Programación/UD10/ProyectoConInterfaz/target/
+/03_Programación/UD10/DiscoDuroDeRoer/ejercicio1/target/
+/03_Programación/UD10/DiscoDuroDeRoer/ejercicio2_Interfaz_Grafica/target/
+/03_Programación/UD10/DiscoDuroDeRoer/ejercicio3_Interfaz_Grafica/target/
+/03_Programación/UD10/DiscoDuroDeRoer/DNI/nbproject/private/
+/03_Programación/UD10/DiscoDuroDeRoer/DNI/build/
